--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - command:
             - /manager
+          args: ["--pytorch-init-container-image", "icr.io/fms/alpine:3.10"]
           image: kubeflow/training-operator
           name: training-operator
           ports:
